# ansible-role-debian-installer

./: .ansible-lint-ignore  .talismanrc  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  molecule.yml  release.yml
defaults/: main.yml
meta/: main.yml
molecule/default/: converge.yml  destroy.yml  molecule.yml  prepare.yml  vars.yml  verify.yml
tasks/: main.yml
templates/: debian.seed.j2  isolinux.j2
