[tool.poetry]
name = "nephelaiio-debian-installer"
version = "6.2.5"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ansible = "^8.4.0"
netaddr = "^0.8.0"
ansible-lint = { version = "^6.20.3", markers = "platform_system != 'Windows'" }
libvirt-python = "^9.8.0"
molecule = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
