[tool.poetry]
name = "nephelaiio-debian-installer"
version = "6.2.5"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^24.2.0", markers = "platform_system != 'Windows'" }
libvirt-python = "^9.8.0"
molecule = "^6.0.3"
netaddr = "^0.9.0"
ansible = "^8.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
